--- a/front-end/package.json
+++ b/front-end/package.json
@@ -29,11 +29,14 @@
     "web-vitals": "2.1.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
     "eslint-config-trybe-frontend": "1.3.0",
+    "postcss": "^8.4.16",
     "stylelint": "14.6.0",
     "stylelint-config-standard": "25.0.0",
-    "stylelint-order": "5.0.0"
-  }, 
+    "stylelint-order": "5.0.0",
+    "tailwindcss": "^3.1.8"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
