--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "daisyui": "^2.31.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.0"
   }
 }
